# aoc_template_rs

./: .gitignore  Cargo.toml  README.md
input/: README.md
src/: args.rs  main.rs  solutions.rs
src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  day.rs  mod.rs  test.rs
